src/objects/copado__Git_Backup__c.object
<CustomObject>
    <fields>
        <fullName>BranchURI__c</fullName>
        <description>Web URI to provide a quick shortcut to view the branch</description>
        <formula>copado__Git_Repository__r.WebURI__c + &apos;/tree/&apos; +  copado__Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BranchURI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Branch__c</fullName>
        <defaultValue>&quot;master&quot;</defaultValue>
        <inlineHelpText>the branch in the selected git repository. Usually &quot;master&quot;.</inlineHelpText>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipName>Git_Backups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Git_Snapshot_Permissions__c</fullName>
        <label>Git Snapshot Permissions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allow Snapshots &amp; Commits</fullName>
                    <default>true</default>
                    <label>Allow Snapshots &amp; Commits</label>
                </value>
                <value>
                    <fullName>Allow Snapshots Only</fullName>
                </value>
                <value>
                    <fullName>Allow Commits Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Last_Backup__c</fullName>
        <label>Last Snapshot</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_Types__c</fullName>
        <inlineHelpText>Empty means all types. Select one or more types to limit the backup only to selected items.</inlineHelpText>
        <label>Metadata Types</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Org__c</fullName>
        <label>Org Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Git Snapshots</relationshipLabel>
        <relationshipName>Git_Backups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the branch in your Git Repository&apos;s end.</description>
        <formula>HYPERLINK(IF(AND(NOT(ISNULL(copado__Git_Repository__r.copado__Branch_Base_URL__c)), copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;), copado__Git_Repository__r.copado__Branch_Base_URL__c + copado__Branch__c,&apos;&apos;), copado__Branch__c)</formula>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <label>Git Snapshot</label>
    <listViews>
        <fullName>Backup_Snapshots</fullName>
        <columns>NAME</columns>
        <columns>copado__Branch__c</columns>
        <columns>copado__Git_Repository__c</columns>
        <columns>copado__Frequency__c</columns>
        <columns>copado__Last_Backup__c</columns>
        <columns>copado__Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Backup</value>
        </filters>
        <label>Backup Snapshots</label>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Git_Snapshot_Permissions__c</columns>
        <columns>copado__Branch__c</columns>
        <columns>copado__Git_Repository__c</columns>
        <columns>copado__Frequency__c</columns>
        <columns>copado__Org__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Git Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Branch_Naming_Convention</fullName>
        <active>true</active>
        <description>Branch naming convention requires that Branch name == Environment name without Prefix</description>
        <errorConditionFormula>RIGHT( copado__Org__r.copado__Environment__r.Name ,(LEN(copado__Org__r.copado__Environment__r.Name) - 
FIND(&apos;-&apos;,copado__Org__r.copado__Environment__r.Name) )) &lt;&gt;  copado__Branch__c</errorConditionFormula>
        <errorMessage>Branch naming convention requires that Branch name == Environment name without Prefix
Env: INS-PROJ1DEV   branch must be &apos;PROJ1DEV&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Commits_not_allowed_in_Backup_Repository</fullName>
        <active>true</active>
        <description>Commits not allowed in Backup Repository</description>
        <errorConditionFormula>copado__Git_Repository__r.IsBackupsOnly__c &amp;&amp; 
CASE(copado__Git_Snapshot_Permissions__c
,&quot;Allow Commits Only&quot;,1
,&quot;Allow Snapshots &amp; Commits&quot;,1
,0)==1</errorConditionFormula>
        <errorMessage>Commits are not allowed to Backup Repositories.  Select &quot;Allow Snapshots Only&quot;</errorMessage>
    </validationRules>
</CustomObject>